work on mid section

--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
     <section>
          <h2>About Me</h2>
             <p> My name is Maggie and I like coding </p>
-         <h2>Look What I can do</h2>
-            <p> https://magtron3030.github.io/semantic-html/ </p> 
+    </section>
+    <section>
+         <h2>Look what I can do</h2>
+            <p> https://magtron3030.github.io/semantic-html/ </p>
+    </section>   
+    <section>      
          <h2>Resume</h2>
             <p> Click here to see my resume </p>
                
@@ -42,7 +46,7 @@
    </main>
 
    <footer>
-      <h3>Contact Me</h3>
+      <h2>Contact Me</h2>
    <span class="contactinfo">
       <div>MaggieMcDowell4@gmail.com</div>
       <div>208-986-2993</div>
