--- a/index.html
+++ b/index.html
@@ -1,61 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Portfolio</title>
-   <link rel="stylesheet" href="./assets/style.css">
-
-
-</head>
-<body>
-   <header class="mtrainer">
-     <div class="title-area"></div>
-         <h1>Maggie McDowell</h1> 
-         <nav> 
-          <ul>
-            <li> <a href="aboutme">About Me</a></li>
-            <li> <a href="work">Work</a></li>
-            <li> <a href="contact">Contact</a></li>
-            <li> <a href="resume">Resume</a> </li>
-          </ul>
-       </nav>
-      <figure>
-         <img src="./assets/living-room-selfie.png" alt="selfie" class="selfie">
-       </figure>
-      <div class="portfolio">My 2024 Portfolio</div>
-    </header>
-
-  
-
-   <main>
-    <section>
-         <h2>About Me</h2>
-            <p> My name is Maggie and I like coding </p>
-    </section>
-    <section>
-         <h2>Look what I can do</h2>
-            <p> https://magtron3030.github.io/semantic-html/ </p>
-    </section>   
-    <section>      
-         <h2>Resume</h2>
-            <p> Click here to see my resume </p>
-               
-            <button>Click here!</button>
-      </section>
-   </main>
-
-   <footer>
-      <h2>Contact Me</h2>
-   <span class="contactinfo">
-      <div>MaggieMcDowell4@gmail.com</div>
-      <div>208-986-2993</div>
-      <div>Instagram</div>
-      <div>LinkedIn</div>
-     </span>
-   </footer>
-
-
-   
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Portfolio</title>
+        <link rel="stylesheet" href="./assets/style.css">
+    </head>
+    <body>
+        <header class="mtrainer">
+            <div class="title-area">
+                <h1 class="myname">Maggie McDowell</h1>
+                <nav class="nav">
+                    <ul>
+                        <li>
+                            <a href="aboutme">About Me</a>
+                        </li>
+                        <li>
+                            <a href="work">Work</a>
+                        </li>
+                        <li>
+                            <a href="contact">Contact</a>
+                        </li>
+                        <li>
+                            <a href="resume">Resume</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <section class="photocontainer">
+                <figure class="profilepic">
+                    <img src="./assets/living-room-selfie.png" alt="selfie" class="selfie">
+                </figure>
+                <div id="portfolio">
+                    <span>My 2024 Portfolio</span>
+                </div>
+            </section>
+        </header>
+        <main>
+            <section>
+                <h2>About Me</h2>
+                <p> My name is Maggie and I like coding</p>
+            </section>
+            <section>
+                <h2>Look what I can do</h2>
+                <p> https://magtron3030.github.io/semantic-html/</p>
+            </section>
+            <section>
+                <h2>Resume</h2>
+                <p> Click here to see my resume</p>
+                <button>Click here!</button>
+            </section>
+        </main>
+        <footer>
+            <h2>Contact Me</h2>
+            <span class="contactinfo">
+                <div>MaggieMcDowell4@gmail.com</div>
+                <div>208-986-2993</div>
+                <div>Instagram</div>
+                <div>LinkedIn</div>
+            </span>
+        </footer>
+    </body>
 </html>
